--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -120,7 +120,7 @@
 	      <img src="/sandbox/ICE23.png"><br><br>
 	      <h7>Once successfully in, I was able to navigate to his primary directory which had a 
 		      private rsa key. I downloaded the key and used chmod to make it readable.</h7><br><br>
-	      <img src="/sandbox/ICE024.png"><br><br>
+	      <img src="/sandbox/ICE24.png"><br><br>
 	      <h7>With his key, I was then able to access the entire system.</h7><br><br>
 	      <img src="/sandbox/ICE25.png"><br><br>
 	      <h7>From there I was able to ssh into another account 
@@ -129,21 +129,27 @@
 	      <h7>Now that I had the AES encryption information, I unzipped the web host backup file and could use the encryption 
 		      method to unlock and decipher the password and shadow information.</h7><br><br>
 	      <img src="/sandbox/ICE27.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>After concatenating the password and shadow files, I ran them with John the ripper. I 
+		      made the mistake of using the rockyou.txt list, rather than the darkc0de.lst as recommended. 
+		      36 hours later revealed no password.</h7><br><br>
 	      <img src="/sandbox/ICE28.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>Then I tried using just the default John list. 48 hours later; still no password.</h7><br><br>
 	      <img src="/sandbox/ICE29.png"><br><br>
 	      <h7></h7><br><br>
 	      <img src="/sandbox/ICE30.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>Finally, I tracked down the darkc0de list, and used it with john to crack the password. It took only a few hours.</h7><br><br>
 	      <img src="/sandbox/ICE31.png"><br><br>
 	      <h7></h7><br><br>
 	      <img src="/sandbox/ICE32.png"><br><br>
 	      <h7></h7><br><br>
 	      <img src="/sandbox/ICE33.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>Finally, I had complete access and was able to unlock the secret.jpg.</h7><br><br>
 	      <img src="/sandbox/ICE34.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7> This vulnerability suite was designed to prove that though organizations 
+		      often believe security is good, it is in actuality penetrable. Not just through 
+		      lax security methods, but careless communication practices as well, revealed that human 
+		      beings careless behaviors are always an organizational vulnerability.
+</h7><br><br>
 
 
 <h2>All Tags</h2>        
