--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                 <a class="tag" href="/tag/password-cracking/">password-cracking</a>
 		<a class="tag" href="/tag/nmap/">nmap</a>
 		<a class="tag" href="/tag/john-the-ripper/">john the ripper</a>
-		<a class="tag" href="/tag/php/">php</a>    
+		<a class="tag" href="/tag/php/">php</a>
+		<a class="tag" href="/tag/ftp/">ftp</a>
+		<a class="tag" href="/tag/linux/">linux</a>     
                 <br><br>
 </div>
 		  
