--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -33,8 +33,8 @@
 <img src="/avatar.png" width="256px" height="256px" class="author-avatar" onclick="window.open('https://twitter.com/matthew_s_reese','_blank');">
 <h7>
 	Matthew Reese<br>
-	InfoSec Cyber Security researcher. <br>
-	I spend a great deal of time trying to break things and building them back up.
+	InfoSec Cyber Security Researcher<br>
+	I spend a great deal of time trying to break things. What a way to live.
 </h7>
 </div>
 <h2>Password Cracking 101</h2>
