--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -154,8 +154,13 @@
 
 <h2>All Tags</h2>        
   <div class="tag-cloud">
-  <a href="/tag/linux/" class="set-5">linux</a> <a href="/tag/john-the-ripper/" class="set-1">john-the-ripper</a>
-  <a href="/tag/password-cracking/" class="set-1">password-cracking</a>	  
+  <a class="tag" href="/tag/ftp/">ftp</a>
+                <a class="tag" href="/tag/ice-1.140/">Ice 1.140</a>
+		<a class="tag" href="/tag/john-the-ripper/">john the ripper</a>    
+		<a class="tag" href="/tag/linux/">linux</a>
+		<a class="tag" href="/tag/nmap/">nmap</a>    
+                <a class="tag" href="/tag/password-cracking/">password-cracking</a>
+		<a class="tag" href="/tag/php/">php</a><br><br>	  
 </div>
 </body>
 </html>
