--- a/sandbox/ice-1.140.html
+++ b/sandbox/ice-1.140.html
@@ -42,7 +42,7 @@
 	      
 <h7>Ice 1.140 is a penetration testing enviroment, purposely left with vulnerablites in order to teach younglings
 	the basics of penetration testing. The De-ICE vulnerability suites were created to give security testers 
-	a safe environment to test for security vulnerabilities. It is considered to be low lovel of difficulty 
+	a safe environment to test for security vulnerabilities. It is considered to have a low level of difficulty 
 	by those who designed it. I use Virtualbox, where I've installed this version of De-ICE, and Kali Linux in forensics mode, in order to test for 
 	vulnerabilities, and used NAT network server to establish a connection. Virtual Box is a virtual machine used to
 	"sandbox" or isolate your work enviroment from your actual computer.<br><br></h7>
