--- a/pen-test-basics/tcpdump-wireshark.html
+++ b/pen-test-basics/tcpdump-wireshark.html
@@ -39,11 +39,21 @@
 </div>
 <h2>Wireshark and TcpDump 101</h2>
 	      
-<h7>John the Ripper is known as the go to password cracking program. It's free and comes standard with Kali Linux.
-However it is not a point and click use application. All commands must be run through the command prompt. As an example, 
-	we will crack the default password that comes with kali, which is "toor," or root backwards.<br><br></h7>
+<h7>WireShark and tcpdump are programs used to sniff(copy) and anaylze network traffic. They are both open source (free) and comes standard with Kali Linux.
+However, neither is a point and click application. All tcpdump commands must be run through the command prompt.<br><br></h7>
 	      
-<img src="/pen-test-basics/pass01.png"><br><br>	      
+              <img src="/pen-test-basics/tcp01.png"><br><br>
+	      <h7></h7><br><br>
+	      <img src="/pen-test-basics/tcp02.png"><br><br>
+	      <h7></h7><br><br>
+	      <img src="/pen-test-basics/tcp03.png"><br><br>
+	      <h7></h7><br><br>
+	      <img src="/pen-test-basics/wire01.png"><br><br>
+	      <h7></h7><br><br>
+	      <img src="/pen-test-basics/wire02.png"><br><br>
+	      <h7></h7><br><br>
+	      <img src="/pen-test-basics/wire03.png"><br><br>
+	      <h7></h7><br><br>
 
 
 <h2>All Tags</h2>        
