--- a/pen-test-basics/tcpdump-wireshark.html
+++ b/pen-test-basics/tcpdump-wireshark.html
@@ -43,7 +43,9 @@
 However, neither is a point and click application. All tcpdump commands must be run through the command prompt.<br><br></h7>
 	      
               <img src="/pen-test-basics/tcp01.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>By using the tcpdump command "tcpdump -v -w /root/Documents" tcpdump begins to capture and write a tcp packet capture scan to the file, "/root/Documents," 
+		      with the name of the file tcp0. With the packet capture now active, I opened Firefox Mozilla, then opened the homepage to https://google.com and then 
+		      searched for something simple, the term 'deer.' </h7><br><br>
 	      <img src="/pen-test-basics/tcp02.png"><br><br>
 	      <h7></h7><br><br>
 	      <img src="/pen-test-basics/tcp03.png"><br><br>
