--- a/pen-test-basics/tcpdump-wireshark.html
+++ b/pen-test-basics/tcpdump-wireshark.html
@@ -47,7 +47,10 @@ However, neither is a point and click application. All tcpdump commands must be 
 		      with the name of the file tcp0. With the packet capture now active, I opened Firefox Mozilla, then opened the homepage to https://google.com and then 
 		      searched for something simple, the term 'deer.' </h7><br><br>
 	      <img src="/pen-test-basics/tcp02.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>After intializing the search and then waiting a few minutes for the page to load, I ended the capture. Because this is for demonstration purposes, there 
+		      is no need to capture more data, because the size of the capture file is determined by the amount of time the data is being captured.
+		      Using the ctrl+C command, tcpdump then prints a message identifying the amount of packets captured(1282) and dropped(50). 
+</h7><br><br>
 	      <img src="/pen-test-basics/tcp03.png"><br><br>
 	      <h7></h7><br><br>
 	      <img src="/pen-test-basics/wire01.png"><br><br>
