--- a/pen-test-basics/tcpdump-wireshark.html
+++ b/pen-test-basics/tcpdump-wireshark.html
@@ -63,11 +63,14 @@
 		      broadcast and not multicast’ selected. In wireshark, each packet’s information can be viewed in one of three windows. 
 		      In the first window, each packet with source, destination and protocol information can be viewed.</h7><br><br>
 	      <img src="/pen-test-basics/wire01.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>In the second pane has the details of each packet, mostly the protocols, port’s used, response times, 
+		      and tcp analysis.  </h7><br><br>
 	      <img src="/pen-test-basics/wire02.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>The bottom pane has the byte information of each packet. In the first packet, hex of the data’s source 
+		      are visible, as any encryption/decryption information.  </h7><br><br>
 	      <img src="/pen-test-basics/wire03.png"><br><br>
-	      <h7></h7><br><br>
+	      <h7>The point of this demonstration was to illustrate how network packet data can be captured with tcpdump and 
+	      better analzed with Wireshark. These tools can be used individually, but work better in conjunction. </h7><br><br>
 
 
 <h2>All Tags</h2>        
