--- a/pen-test-basics/dosattack.html
+++ b/pen-test-basics/dosattack.html
@@ -40,29 +40,29 @@
 <h2>Capturing a DoS Attack 101</h2>
 	      
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos01.png"><br><br>
+	            <img src="/pen-test-basics/Dos01.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos02.png"><br><br>
+	            <img src="/pen-test-basics/Dos02.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos03.png"><br><br>
+	            <img src="/pen-test-basics/Dos03.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos04.png"><br><br>
+	            <img src="/pen-test-basics/Dos04.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos05.png"><br><br>
+	            <img src="/pen-test-basics/Dos05.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos06.png"><br><br>
+	            <img src="/pen-test-basics/Dos06.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos07.png"><br><br>
+	            <img src="/pen-test-basics/Dos07.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos08.png"><br><br>
+	            <img src="/pen-test-basics/Dos08.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos09.png"><br><br>
+	            <img src="/pen-test-basics/Dos09.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos10.png"><br><br>
+	            <img src="/pen-test-basics/Dos10.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos11.png"><br><br>
+	            <img src="/pen-test-basics/Dos11.png"><br><br>
               <h7><br><br></h7>
-	            <img src="/pen-test-basics/dos12.png"><br><br>
+	            <img src="/pen-test-basics/Dos12.png"><br><br>
               <h7><br><br></h7>
 	     
 
