--- a/pen-test-basics/dosattack.html
+++ b/pen-test-basics/dosattack.html
@@ -39,7 +39,7 @@
 </div>
 <h2>Capturing a DoS Attack 101</h2>
 	      
-              <h7>To demonstrate a DoS attack, Metasploit server was launched to be 
+              <h7>To demonstrate a DoS attack, a Metasploit server was launched to be 
 		      the victim on a separate virtualbox machine at local IP 192.168.0.26. 
 		      Simultaneously, using Kali Linux, Wireshark was launched on a Kali virtualbox, which was 
 		      used to launch the attack, which can be seen as the eth0 network traffic at IP 192.168.0.25.</h7><br><br>
