--- a/pen-test-basics/dosattack.html
+++ b/pen-test-basics/dosattack.html
@@ -41,7 +41,7 @@
 	      
               <h7>To demonstrate a DoS attack, a Metasploit server was launched to be 
 		      the victim on a separate virtualbox machine at local IP 192.168.0.26. 
-		      Simultaneously, using Kali Linux, Wireshark was launched on a Kali virtualbox, which was 
+		      Simultaneously, using Kali Linux, Wireshark was launched on a seperate virtualbox, a program called hping was 
 		      used to launch the attack, which can be seen as the eth0 network traffic at IP 192.168.0.25.</h7><br><br>
 	            <img src="/pen-test-basics/Dos01.png"><br><br>
               <h7>As shown above, hping3 launched a flood attack, which lasted for around 
