--- a/pen-test-basics/cracking-passwords.html
+++ b/pen-test-basics/cracking-passwords.html
@@ -39,7 +39,7 @@
 </div>
 <h2>Password Cracking 101</h2>
 	      
-<h7>John the Ripper is known as the go to password cracking program. It's free and comes standard with Kali Linux.
+<h7 class="clean">John the Ripper is known as the go to password cracking program. It's free and comes standard with Kali Linux.
 However it is not a point and click use application. All commands must be run through the command prompt. As an example, 
 	we will crack the default password that comes with kali, which is "toor," or root backwards.<br><br></h7>
 	      
