--- a/forensics/corporate-theft-investigation.html
+++ b/forensics/corporate-theft-investigation.html
@@ -53,29 +53,42 @@ is complicite in the crime, and it is our job to find any proof in the evidence 
 <img src="/forensics/Investigation03.png"><br><br>
 	      <h7></h7> <br><br>
 <img src="/forensics/Investigation04.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>In the recycling bin we can see one of the last things deleted was an ‘employee list.’
+</h7> <br><br>
 <img src="/forensics/Investigation05.png"><br><br>
 	      <h7></h7> <br><br>
 <img src="/forensics/Investigation06.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>Using a program called Redline, the RAM capture was imported to examine it's contents.</h7> <br><br>
 <img src="/forensics/Investigation07.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>Using the program, Volatility, we can use a netscan to reveal all of the connections.</h7> <br><br>
 <img src="/forensics/Investigation08.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>We can see in the timeline that the mysterious process, "wintroj.exe" is linked to hidden functionality.
+	      It's clearly a trojan virus, but can we prove how it got on to the workstation and who put it there?</h7> <br><br>
 <img src="/forensics/Investigation09.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>Here we can see all the processes associated with the Jane’s RAM capture. We can see that one IP 
+		      seems to be questionable: 172.16.247.194. Also the IP 69.175.70.186:9 could be a potential 
+		      point of interest.</h7> <br><br>
 <img src="/forensics/Investigation10.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>Jane has a few communications that begin to reveal her actions. In the final email, we can 
+		      see Roger Young has emailed her a link to a picture.</h7> <br><br>
 <img src="/forensics/Investigation11.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>As we can see, she was just hired on 12/30/13. Also, her boss left a usb drive for her.</h7> <br><br>
 <img src="/forensics/Investigation12.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>She has a few emails from coding websites. If we dig a little deeper, encase has provided us with the 
+		      webbrowing history. We can see some very suspicious web sites were visited such as: az100143.vo.msecnd.net, 
+		      aspn.activate.com, and then local destinations like 192.168.1.110:8080. </h7> <br><br>
 <img src="/forensics/Investigation13.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>The link to the image in the final email from roger:  http://192.168.1.110:8080/pAjmZYt seems 
+	      incredibly suspicious.</h7> <br><br>
 <img src="/forensics/Investigation14.png"><br><br>
 	      <h7></h7> <br><br>	      
 <img src="/forensics/Investigation15.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>We can see in the recent files list a python script called ‘secret sauce.’ 
+		      If we look through the user’s internet history, we can see that the user 
+		      has visited numerous coding websites, probably a novice coder that needs 
+		      help writing a malicious piece of code. If we check the user’s emails we 
+		      will probably find a motive and possible correspondences with a partner.
+</h7> <br><br>
 <img src="/forensics/Investigation16.png"><br><br>
 	      <h7></h7> <br><br>
 <img src="/forensics/Investigation17.png"><br><br>
