--- a/forensics/corporate-theft-investigation.html
+++ b/forensics/corporate-theft-investigation.html
@@ -34,7 +34,7 @@
 
 <h7>
 	Matthew Reese<br>
-	InfoSec Cyber Security Researcher<br>
+	Information Security Researcher<br>
 	I spend a great deal of time trying to break things. What a way to live.
 </h7>
 </div>
