--- a/forensics/corporate-theft-investigation.html
+++ b/forensics/corporate-theft-investigation.html
@@ -98,7 +98,10 @@ is complicite in the crime, and it is our job to find any proof in the evidence 
 <img src="/forensics/Investigation19.png"><br><br>
 	      <h7></h7> <br><br>
 <img src="/forensics/Investigation20.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>The desktop.ini file reveals suspicious 
+		      shell code activity and the contents 
+		      of the BingBarSetup, which appears to be 
+		      malicious.</h7> <br><br>
 <img src="/forensics/Investigation21.png"><br><br>
 	      <h7></h7> <br><br>
 <img src="/forensics/Investigation22.png"><br><br>
