--- a/forensics/corporate-theft-investigation.html
+++ b/forensics/corporate-theft-investigation.html
@@ -90,7 +90,8 @@ is complicite in the crime, and it is our job to find any proof in the evidence 
 		      will probably find a motive and possible correspondences with a partner.
 </h7> <br><br>
 <img src="/forensics/Investigation16.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>It appears that Jane was leaking the PII, including salaries, of the employees of Black Suit 
+		      Computing, as we can see from this spreadsheet document found in Jane’s document folder. </h7> <br><br>
 <img src="/forensics/Investigation17.png"><br><br>
 	      <h7></h7> <br><br>
 <img src="/forensics/Investigation18.png"><br><br>
