--- a/forensics/corporate-theft-investigation.html
+++ b/forensics/corporate-theft-investigation.html
@@ -93,7 +93,10 @@ is complicite in the crime, and it is our job to find any proof in the evidence 
 	      <h7>It appears that Jane was leaking the PII, including salaries, of the employees of Black Suit 
 		      Computing, as we can see from this spreadsheet document found in Jane’s document folder. </h7> <br><br>
 <img src="/forensics/Investigation17.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>We can see in the metadata that the file was created at 6:19 PM. the day she was hired and the 
+		      file was deleted almost exactly 15 minutes later. We can also see in the metadata that the 
+		      Employee List file was created at the exact same time as the secretsauce.py file was. This 
+		      all took place after hours, which was likely done to obscure detection.</h7> <br><br>
 <img src="/forensics/Investigation18.png"><br><br>
 	      <h7></h7> <br><br>
 <img src="/forensics/Investigation19.png"><br><br>
