--- a/forensics/corporate-theft-investigation.html
+++ b/forensics/corporate-theft-investigation.html
@@ -98,7 +98,9 @@ is complicite in the crime, and it is our job to find any proof in the evidence 
 		      Employee List file was created at the exact same time as the secretsauce.py file was. This 
 		      all took place after hours, which was likely done to obscure detection.</h7> <br><br>
 <img src="/forensics/Investigation18.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>It appears that the timezone of Jane’s workstation was China Standard time, 
+		      UTC +8:00 Beijing, Chongqing, Hong Kong, Urumqi. The registry values indicate 
+		      that this time zone was last written to the hard drive on the date of 12/12/23 05:00:14 PM.</h7> <br><br>
 <img src="/forensics/Investigation19.png"><br><br>
 	      <h7></h7> <br><br>
 <img src="/forensics/Investigation20.png"><br><br>
