--- a/forensics/corporate-theft-investigation.html
+++ b/forensics/corporate-theft-investigation.html
@@ -41,7 +41,7 @@
 	      
 <h2>Corporate Theft Investigation</h2>
 	      
-<h7>Using Forensics tools, we'll investigate the theft of corporate property by an employee named, Jane. It is beleived that she
+<h7>Using forensics tools, like Encase and ATK imager, we'll investigate the theft of corporate property by an employee named, "Jane." It is beleived that she
 is complicite in the crime, and it is our job to find any proof in the evidence obtained. A copy of the hard drive and the 
 	volitile Ram was taken after it was established that her workstation was the initial scene of the crime.
 	<br><br></h7>
