--- a/forensics/corporate-theft-investigation.html
+++ b/forensics/corporate-theft-investigation.html
@@ -47,16 +47,18 @@ is complicite in the crime, and it is our job to find any proof in the evidence 
 	<br><br></h7>
 	      
 <img src="/forensics/Investigation01.png"><br><br>	      
-<h7>As you can see, </h7> <br><br>
+<h7>As you can see, using Encase, we can see all of the contents of Jane's hard drive. </h7> <br><br>
 <img src="/forensics/Investigation02.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>We can see a list of it’s users, the registry, and usb devices that were connected.</h7> <br><br>
 <img src="/forensics/Investigation03.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>In the recycling bin we can see one of the last things deleted was an "employee list."</h7> <br><br>
 <img src="/forensics/Investigation04.png"><br><br>
-	      <h7>In the recycling bin we can see one of the last things deleted was an ‘employee list.’
-</h7> <br><br>
+	      <h7>we can see in the recent files list a python script called "secret sauce."</h7><br><br>
 <img src="/forensics/Investigation05.png"><br><br>
-	      <h7></h7> <br><br>
+	      <h7>If we look through the user’s internet history, we can see that the user has visited numerous 
+		      coding websites, probably a novice coder that needs help writing a malicious piece of code. 
+		      If we check the user’s emails we will probably find a motive and possible correspondences 
+		      with a partner.</h7> <br><br>
 <img src="/forensics/Investigation06.png"><br><br>
 	      <h7>Using a program called Redline, the RAM capture was imported to examine it's contents.</h7> <br><br>
 <img src="/forensics/Investigation07.png"><br><br>
